Mon Jan  7 02:12:26 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Automatically detect the Debian multibyte patch to
	  groff.

Mon Jan  7 01:14:39 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/accessdb.c (options, parse_opt): Accept -d/--debug.
	* src/lexgrog_test.c (options, parse_opt): Likewise.
	* src/zsoelim.l (options, parse_opt): Likewise.
	* docs/NEWS: Document this.

Mon Jan  7 01:08:39 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/zsoelim.l (options): Fix incorrect description of -C.

Sun Jan  6 15:01:08 GMT 2008  Colin Watson  <cjwatson@debian.org>

	sigaction is specified as non-interruptible; there is no need to
	wrap it with EINTR detection.

	* lib/xsigaction.c: Remove.
	* include/manconfig.h.in (xsigaction): Remove prototype.
	* lib/Makefile.am (libman_a_SOURCES): Remove xsigaction.c.
	* lib/README: Remove xsigaction.c.
	* lib/cleanup.c (sighandler, trap_signal, untrap_signal): Call
	  sigaction rather than xsigaction.
	* lib/pipeline.c (pipeline_start, pipeline_wait,
	  pipeline_install_sigchld, pipeline_pump): Call sigaction rather
	  than xsigaction.

Sun Jan  6 14:46:36 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* po/nl.po: Update with msgmerge.

Sun Jan  6 14:45:09 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/Rules.man, man/de/Makefile.am, man/es/Makefile.am,
	  man/fr/Makefile.am, man/it/Makefile.am, man/ja/Makefile.am: Use
	  LINGUA rather than LANGUAGE to name the manual page language, as
	  setting LANGUAGE causes 'make' output to be translated.

Sun Jan  6 14:34:15 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/de.UTF-8, man/es.UTF-8, man/fr.UTF-8, man/it.UTF-8,
	  man/ja.UTF-8: Rename to ...
	* man/de, man/es, man/fr, man/it, man/ja: ... these.
	* .bzrignore, configure.ac, man/de/Makefile.am, man/es/Makefile.am,
	  man/fr/Makefile.am, man/it/Makefile.am, man/ja/Makefile.am,
	  man/po4a/po4a.cfg, man/THANKS: Adjust for new directory names.
