@@ -43,7 +43,7 @@
 #include "manp.h"
 #include "convert_name.h"
 
-static __inline__ void gripe_converting_name (const char *name)
+static inline void gripe_converting_name (const char *name)
 {
 	error (FATAL, 0, _("Can't convert %s to cat name"), name);
 }
